[package]
name = "actix-crowd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
async-trait = "0.1.82"
color-eyre = "0.6.3"
const-fnv1a-hash = "1.1.0"
crossbeam = "0.8.4"
cve-rs = "0.6.0"
dashmap = { version = "5.5.3", features = ["rayon"] }
flume = "0.11.0"
futures = "0.3.30"
libloading = "0.8.5"
rand = "0.8.5"
rayon = "1.10.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "sync", "macros"] }

[patch.crates-io]
cve-rs = { git = "https://github.com/CyanChanges/cve-rs.git", branch = "main" }

[dev-dependencies]
expectest = "0.12.0"
mockall = "0.13.0"
